--- a/classWork/WebContent/WEB-INF/web.xml
+++ b/classWork/WebContent/WEB-INF/web.xml
@@ -1,24 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  <filter>
-    <filter-name>CharacterEncodingFilter</filter-name>
-    <filter-class>cn.classwork.filter.EncodeFilter</filter-class>
-    <init-param>
-      <param-name>encoding</param-name>
-      <param-value>UTF-8</param-value>
-    </init-param>
-  </filter>
-  <filter-mapping>
-    <filter-name>CharacterEncodingFilter</filter-name>
-    <url-pattern>/*</url-pattern>
-    <dispatcher>REQUEST</dispatcher>
-    <dispatcher>FORWARD</dispatcher>
-    <dispatcher>INCLUDE</dispatcher>
-    <dispatcher>ASYNC</dispatcher>
-    <dispatcher>ERROR</dispatcher>
-  </filter-mapping>
-  <welcome-file-list>
-    <welcome-file>/index</welcome-file>
-    <welcome-file>/index.jsp</welcome-file>
-  </welcome-file-list>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+	id="WebApp_ID" version="3.1">
+	<filter>
+		<filter-name>CharacterEncodingFilter</filter-name>
+		<filter-class>cn.classwork.filter.EncodeFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+	</filter>
+	<filter>
+		<filter-name>perssionFilter</filter-name>
+		<filter-class>cn.classwork.filter.PerssionFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>perssionFilter</filter-name>
+		<url-pattern>*.html</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>CharacterEncodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+		<dispatcher>REQUEST</dispatcher>
+		<dispatcher>FORWARD</dispatcher>
+		<dispatcher>INCLUDE</dispatcher>
+		<dispatcher>ASYNC</dispatcher>
+		<dispatcher>ERROR</dispatcher>
+	</filter-mapping>
+	<welcome-file-list>
+		<welcome-file>/index</welcome-file>
+		<welcome-file>/index.html</welcome-file>
+	</welcome-file-list>
 </web-app>
